add appointment for role barber
