# backend/modules/barberbooking/models/appointment.go
@@ -17,12 +17,13 @@ const (
 	StatusCancelled   AppointmentStatus = "CANCELLED" //ยกเลิก
 	StatusComplete    AppointmentStatus = "COMPLETED" //จบงาน
 	StatusNoShow      AppointmentStatus = "NO_SHOW"
+	StatusInService	  AppointmentStatus = "IN_SERVICE" //กำลังให้บริการ
 	StatusRescheduled AppointmentStatus = "RESCHEDULED" //เปลี่ยนเวลา
 )
 
 type Appointment struct {
 	ID         uint              `gorm:"primaryKey" json:"id"`
-	BranchID   uint              `gorm:"index" json:"branch_id"`      // ไม่ preload branch
+	BranchID   uint              `gorm:"index" json:"branch_id"`     
 	
 	ServiceID  uint              `gorm:"not null" json:"service_id"`
 	Service    Service           `gorm:"foreignKey:ServiceID" json:"service,omitempty"`
@@ -33,7 +34,7 @@ type Appointment struct {
 	CustomerID uint              `gorm:"not null;index" json:"customer_id"`
 	Customer   *Customer 		 `gorm:"-" json:"customer,omitempty"`
 
-	UserID     *uint             `gorm:"index" json:"user_id,omitempty"` // อ้าง user ที่สร้างคิว (ไม่มี FK)
+	UserID     *uint             `gorm:"index" json:"user_id,omitempty"` 
 	TenantID   uint 			 `gorm:"not null;index" json:"tenant_id"`
 	StartTime  time.Time         `gorm:"not null" json:"start_time"`
 	EndTime    time.Time         `gorm:"not null" json:"end_time"`
